updated line in H1

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>this is the para in this is file</p>
+    <p>updated line </p>
 </body>
 </html>
